[package]
name = "grace"
version = "0.1.0"
edition = "2021"

[dependencies]
awdl-frame-parser = { path = "../awdl-frame-parser" }
cfg-if = "1.0.0"
circular-buffer = "0.1.6"
env_logger = "0.10.1"
ether-type = "0.1.3"
ethernet = { version = "0.1.4", features = ["alloc"] }
futures = { default-features = false, git = "https://github.com/Frostie314159/futures-rs.git", features = ["async-await"] }
ieee80211 = "0.1.1"
log = "0.4.20"
mac-parser = "0.1.4"
macro-bits = "0.1.4"
pcap = "1.1.0"
rtap = { git = "https://github.com/Frostie314159/rtap.git", branch = "experimental", version = "0.1.0" }
scroll = "0.12.0"
sudo = "0.6.0"
tidy-tuntap = { version = "0.3.1", path = "../tidy-tuntap", optional = true }
tokio = { version = "1.35.0", features = ["time", "full"] }

[features]
linux = ["dep:tidy-tuntap", "futures/io-compat"]

default = ["linux"]

[dev-dependencies]
sudo = "0.6.0"
tokio = { version = "1.35.0", features = ["full"] }
